Fixed horizonal scrollbar from About PNL

--- a/src/components/AboutPNL/AboutPNL.css
+++ b/src/components/AboutPNL/AboutPNL.css
@@ -14,6 +14,7 @@
 
 .pnllogosRow {
   padding: 1% 2%;
+  margin: 0%;
   /* padding-bottom: 4%; */
 }
 
